[package]
name = "minescan"
authors = ["@alkeryn"]
version = "0.9.2"
edition = "2021"
description = "Minescan, a minecraft server scanner cli tool and library written for extensibility"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.20.1", features = ["full"] }
tokio-io-timeout = "1.2.0"
futures = "0.3.23"

clap = { version = "3.2.17", features = ["derive"] }
atty = "0.2.14"
